# pdf-cite-mcp

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/pdf_cite_mcp/: __init__.py  __main__.py  cache.py  citation.py  cli.py  doctor.py  extractor.py  ocr.py  quote.py  server.py  tables.py  url_fetch.py
tests/: conftest.py  test_doctor_cache_url.py  test_render.py  test_search_quote.py  test_smoke.py  test_tables_ocr.py
