[project]
name = "pdf-cite-mcp"
version = "0.1.0"
description = "MCP server for PDFs — every extraction returns precise {page, bbox, snippet} citations. Cite your sources."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "xultrax-web" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "pdf",
    "citations",
    "claude",
    "llm",
    "ocr",
    "table-extraction",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
tables = ["pdfplumber>=0.11.0"]
search = ["rapidfuzz>=3.0.0"]
all = ["pytesseract>=0.3.10", "pillow>=10.0.0", "pdfplumber>=0.11.0", "rapidfuzz>=3.0.0"]

[project.scripts]
pdf-cite-mcp = "pdf_cite_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/xultrax-web/pdf-cite-mcp"
Repository = "https://github.com/xultrax-web/pdf-cite-mcp"
Issues = "https://github.com/xultrax-web/pdf-cite-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_cite_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
